Added the Service and DTO

--- a/ArticleTest/Properties/launchSettings.json
+++ b/ArticleTest/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "article",
+      "launchUrl": "v1/article",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "ArticleTest": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "article",
+      "launchUrl": "v1/article",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
